[package]
name = "fend-gemini"
version.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ees = "1.0.0"
fend-core.workspace = true
percent-encoding = "2.3.0"
rustls = "0.21.6"
rustls-pemfile = "1.0.3"
tokio = { version = "1.29.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
tokio-rustls = "0.24.1"
url = "2.4.0"
